Fixed icons overflowing on spell selector mobile

--- a/static/main.css
+++ b/static/main.css
@@ -849,9 +849,9 @@ h2 {
 .spell-config .key {
     box-sizing: border-box;
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     background: #333;
-    height: 300px;
+    height: 250px;
     align-items: center;
 
     box-shadow: 5px 5px 5px black;
@@ -964,10 +964,6 @@ h2 {
 }
 
 @media (max-width: 768px) {
-    .spell-config .key {
-        height: 250px;
-    }
-
     .spell-config .key-detail {
         margin-right: 15px;
     }
